# coral-usb-oxidized

./: .gitignore  AGENTS.md  Cargo.toml  README.md  WORKLOG.md  build.rs  phase2-todo.md  phase3-conv2d-todo.md  run_test.sh
captures/: README.md  contract_ledger.tsv  frontier00_claim_map.tsv  index.tsv  inventory_phase4_7_dense.csv  run_import_sample_batch.sh  run_inventory_phase4_7_dense.sh
docs/: WORKLOG.archive.md  active_path.md  archive_index.md  clip_vit_block_tpu_pipeline.md  clip_vit_full_forward.md  clip_vit_layer_tpu_probe.md  clip_vit_safetensors_report.md  conv_layout_probe.md  coral_edgetpu_re_analysis_2026-02-24.md  coral_research_findings-1.md  coral_research_findings-2.md  cpu_vs_edgetpu_harness_spec.md  cpu_vs_edgetpu_mvp_spec.md  dense_gemm_replay_benchmark_2026-03-06.md  dense_layout_probe.md  dense_replay_vs_pi_cpu_2026-03-07.md  descriptor_ring_contract_handoff_2026-02-24.md  examples.md  executable_opcode_diff.md  external_research_2026-02-21.md  focus_points.md  frontier00_trace_contract_stub_2026-03-16.md  function_gemma_decode_loop.md  function_gemma_layer_tpu_probe.md  function_gemma_lm_head_sanity.md  gemm_weight_load_verify.md  index.md  instruction_dim_field_analysis_2026-03-01.md  instruction_word_field_analysis_2026-03-01.md  legacy_compatibility.md  libusb_async_reasoning_handoff_2026-02-25.md  m3_instruction_coupling_and_unseen_prediction_2026-03-03.md  m4_compilerless_param_override_2026-03-03.md  m4_family_profile_glue_2026-03-03.md  m4_tiered_instruction_profile_device_validation_2026-03-03.md  milestone3_param_stream_dut_matrix_2026-03-03.md  milestone3_param_stream_mod251_probe_2026-03-03.md  milestone3_param_stream_probe_2026-03-03.md  milestone_holdout_8976_2352_2026-03-01.md  milestone_manifest_8976_2352_2026-03-01.json  (+50 more)
examples/: basic_usage.rs  clip_vit_block_tpu_pipeline.rs  clip_vit_full_forward.rs  clip_vit_layer_tpu_probe.rs  clip_vit_safetensors_report.rs  cpu_gemm_baseline.rs  cpu_vs_edgetpu_mvp.rs  delegate_usage.rs  function_gemma_decode_loop.rs  function_gemma_layer_tpu_probe.rs  function_gemma_lm_head_sanity.rs  gemm_csr_perturb_probe.rs  gemm_int8.rs  gemm_int8_bundled.rs  gemm_int8_dynamic.rs  gemm_tiled_rows.rs  gemm_weight_load_verify.rs  image_classification.rs  inference_benchmark.rs  inference_dump.rs  model_inference.rs  model_loading.rs  rusb_control_plane_probe.rs  rusb_param_glitch_fuzz.rs  rusb_serialized_exec_replay.rs  rust_dense_template_compile.rs  simple_delegate.rs  tflite_standard_example.rs  tflite_test.rs  transformer_linear_block.rs  verify_device.rs
scripts/: benchmark_dense_gemm_replay.sh  benchmark_dense_tiled_gemm_replay.sh  benchmark_dense_tiled_rows_replay.sh  benchmark_pi_cpu_int8_linear.sh  m3_instruction_coupling_probe.sh  m3_instruction_predict_unseen_rect1792.sh  m3_param_stream_probe.sh  m5_build_family_patchspecs.sh  m5_crossdim_oracle_matrix.sh  m5_eo_neutral_window_crosscheck.sh  m5_eo_oracle_group_probe.sh  m5_eo_rule_refine_probe.sh  m5_eo_window_refine_probe.sh  m5_family_transition_map.sh  m6_instruction_axis_probe.sh  phase3_conv2d_crossdim_oracle_matrix.sh  phase3_conv2d_eo_group_probe.sh  phase3_conv2d_eo_p32_core_refine_probe.sh  phase3_conv2d_eo_targeted_refine_probe.sh  phase3_conv2d_eo_window_refine_probe.sh  phase3_conv2d_family_bootstrap.sh  phase3_conv2d_layout_matrix.sh  phase3_conv2d_param_override_matrix.sh  phase3_conv2d_prefix_residual_probe.sh  phase4_conv2d_k3_completion_demo.sh  phase4_conv2d_k3_crossdim_oracle_matrix.sh  phase4_conv2d_k3_eo_core_refine_probe.sh  phase4_conv2d_k3_eo_group_probe.sh  phase4_conv2d_k3_eo_provenance_probe.sh  phase4_conv2d_k3_family_scout.sh  phase4_conv2d_k3_freeze_family_assets.sh  (+7 more)
src/: build.rs  (+17 more)
(+928 files in other folders)
