[package]
name = "coral-usb-oxidized"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
half = "2.7.1"
libc = "0.2.171"
memmap2 = "0.9.9"
rusb = "0.9.4"
safetensors = "0.6.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# Optional TensorFlow Lite bindings for Rust
# Uncomment if you want to use Rust bindings instead of C API
# tensorflow = { version = "0.21.0", optional = true }
# moonfire-tflite = { version = "0.4.0", optional = true }

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.16"

[features]
default = []
legacy-runtime = []
