[package]
name = "coral-usb-oxidized"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
half = "2.7.1"
libc = "0.2.171"
memmap2 = "0.9.9"
rusb = "0.9.4"
safetensors = "0.6.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# Optional TensorFlow Lite bindings for Rust
# Uncomment if you want to use Rust bindings instead of C API
# tensorflow = { version = "0.21.0", optional = true }
# moonfire-tflite = { version = "0.4.0", optional = true }

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.16"

[features]
default = []
# Compatibility-only surface for delegate/TFLite/libedgetpu examples.
# The active Phase 4 path should build and run without this feature.
legacy-runtime = []

# Compatibility-only example surface below this point.
[[example]]
name = "basic_usage"
required-features = ["legacy-runtime"]

[[example]]
name = "cpu_vs_edgetpu_mvp"
required-features = ["legacy-runtime"]

[[example]]
name = "delegate_usage"
required-features = ["legacy-runtime"]

[[example]]
name = "gemm_csr_perturb_probe"
required-features = ["legacy-runtime"]

[[example]]
name = "gemm_int8"
required-features = ["legacy-runtime"]

[[example]]
name = "gemm_int8_bundled"
required-features = ["legacy-runtime"]

[[example]]
name = "gemm_int8_dynamic"
required-features = ["legacy-runtime"]

[[example]]
name = "gemm_tiled_rows"
required-features = ["legacy-runtime"]

[[example]]
name = "gemm_weight_load_verify"
required-features = ["legacy-runtime"]

[[example]]
name = "inference_benchmark"
required-features = ["legacy-runtime"]

[[example]]
name = "inference_dump"
required-features = ["legacy-runtime"]

[[example]]
name = "simple_delegate"
required-features = ["legacy-runtime"]

[[example]]
name = "tflite_test"
required-features = ["legacy-runtime"]

[[example]]
name = "verify_device"
required-features = ["legacy-runtime"]

[[example]]
name = "clip_vit_block_tpu_pipeline"
required-features = ["legacy-runtime"]

[[example]]
name = "clip_vit_full_forward"
required-features = ["legacy-runtime"]

[[example]]
name = "clip_vit_layer_tpu_probe"
required-features = ["legacy-runtime"]

[[example]]
name = "function_gemma_decode_loop"
required-features = ["legacy-runtime"]

[[example]]
name = "function_gemma_layer_tpu_probe"
required-features = ["legacy-runtime"]

[[example]]
name = "tflite_standard_example"
required-features = ["legacy-runtime"]

[[example]]
name = "transformer_linear_block"
required-features = ["legacy-runtime"]
